<resources>
    <string name="app_name">NewsAppStage2</string>
    <string name="news_preferences_title">News Preferences</string>

    <!-- ORDER BY STRINGS -->

    <string name="settings_order_by_title">Order By</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>

    <string name="settings_order_by_newest_label">Newest</string>
    <string name="settings_order_by_newest_value" translatable="false">newest</string>
    <string name="settings_order_by_oldest_label">Oldest</string>
    <string name="settings_order_by_oldest_value" translatable="false">oldest</string>
    <string name="settings_order_by_relevance_label">Relevance</string>
    <string name="settings_order_by_relevance_value" translatable="false">relevance</string>

    <string-array name="settings_order_by_labels">
        <item>@string/settings_order_by_newest_label</item>
        <item>@string/settings_order_by_oldest_label</item>
        <item>@string/settings_order_by_relevance_label</item>
    </string-array>

    <string-array name="settings_order_by_values">
        <item>@string/settings_order_by_newest_value</item>
        <item>@string/settings_order_by_oldest_value</item>
        <item>@string/settings_order_by_relevance_value</item>
    </string-array>

    <!-- SECTION STRINGS -->

    <string name="settings_section_title">Section</string>
    <string name="settings_section_key" translatable="false">section</string>

    <string name="settings_section_all_label">All News</string>
    <string name="settings_section_all_value" translatable="false">all</string>
    <string name="settings_section_politics_label">Politics</string>
    <string name="settings_section_politics_value" translatable="false">politics</string>
    <string name="settings_section_weather_label">Weather</string>
    <string name="settings_section_weather_value" translatable="false">weather</string>
    <string name="settings_section_sport_value" translatable="false">sport</string>
    <string name="settings_section_sport_label">Sport</string>
    <string name="settings_section_culture_value" translatable="false">culture</string>
    <string name="settings_section_culture_label">Culture</string>

    <string-array name="settings_section_labels">
        <item>@string/settings_section_all_label</item>
        <item>@string/settings_section_politics_label</item>
        <item>@string/settings_section_weather_label</item>
        <item>@string/settings_section_sport_label</item>
        <item>@string/settings_section_culture_label</item>
    </string-array>

    <string-array name="settings_section_values">
        <item>@string/settings_section_all_value</item>
        <item>@string/settings_section_politics_value</item>
        <item>@string/settings_section_weather_value</item>
        <item>@string/settings_section_sport_value</item>
        <item>@string/settings_section_culture_value</item>
    </string-array>

    <string name="menu_settings">Settings</string>
    <string name="menu_exit">Exit</string>
    <string name="no_internet_connection">Couldn\'t load news, there is probably no internet connection!</string>
</resources>
