<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/news_preferences_title">

    <ListPreference
        android:title="@string/settings_order_by_title"
        android:summary="%s"
        android:defaultValue="@string/settings_order_by_newest_value"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/settings_order_by_key" />

    <ListPreference
        android:title="@string/settings_section_title"
        android:summary="%s"
        android:defaultValue="@string/settings_section_all_value"
        android:entries="@array/settings_section_labels"
        android:entryValues="@array/settings_section_values"
        android:key="@string/settings_section_key" />

</PreferenceScreen>